force-app/main/default/objects/ResourceTeam__c/ResourceTeam__c.object-meta.xml
<CustomObject>
    <label>Resource Team</label>
    <nameField>
        <displayFormat>RT-{00000}</displayFormat>
        <label>Resource Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>