force-app/main/default/objects/ResourceTeam__c/fields/ActualCost__c.field-meta.xml
<CustomField>
    <fullName>ActualCost__c</fullName>
    <formula>(ActualHours__c * CASE(TEXT(TeamName__c), &quot;GFR&quot;, 124, &quot;Sensory&quot;, 106, &quot;FIBI Applications&quot;, 106, &quot;PPD&quot;, 120, 150))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>