force-app/main/default/objects/ResourceTeam__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <label>Scope</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>