force-app/main/default/objects/ResourceTeam__c/fields/TeamName__c.field-meta.xml
<CustomField>
    <fullName>TeamName__c</fullName>
    <label>Team Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FIBI Applications</fullName>
            </value>
            <value>
                <fullName>GFR</fullName>
            </value>
            <value>
                <fullName>PPD</fullName>
            </value>
            <value>
                <fullName>Tech Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>